--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "datos-ext",
   "description": "App de administración de datos externos",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Codenautas <codenautas@googlegroups.com>",
   "license": "MIT",
   "main": "server/app-datos-ext.js",
+  "types": "server/app-datos-ext.d.ts",
   "files": [
     "client",
     "install",
     "server",
     "unlogged"
   ],
+  "repository": "codenautas/datos-ext",
   "dependencies": {
     "backend-plus": "~0.20.58",
+    "bas-ope": "~0.1.3",
     "mini-tools": "~1.0.0",
     "require-bro": "~0.1.11"
   },
@@ -21,7 +24,7 @@
     "@types/yazl": "~2.4.0",
     "discrepances": "~0.2.2",
     "pg-triggers": "~0.2.1",
-    "types.d.ts": "~0.1.16"
+    "types.d.ts": "~0.1.19"
   },
   "engines": {
     "node": ">= 8.0.0"
