--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "repository": "codenautas/datos-ext",
   "dependencies": {
     "backend-plus": "~0.20.58",
+    "varcal": "~0.1.12",
     "bas-ope": "~0.1.3",
     "mini-tools": "~1.0.0",
     "require-bro": "~0.1.11"
