saca funcionalidad y tablas que se llevaron a paquete operativos

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datos-ext",
   "description": "App de administración de datos externos",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "Codenautas <codenautas@googlegroups.com>",
   "license": "MIT",
   "main": "server/app-datos-ext.js",
@@ -15,8 +15,7 @@
   "repository": "codenautas/datos-ext",
   "dependencies": {
     "backend-plus": "~0.20.58",
-    "varcal": "~0.1.16",
-    "bas-ope": "~0.1.3",
+    "operativos": "~0.1.4",
     "mini-tools": "~1.0.0",
     "require-bro": "~0.1.11"
   },
