--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "window.title": "${dirty}${separator}${rootName}${separator}${activeEditorShort}"
+    "window.title": "${dirty}${separator}${rootName}${separator}${activeEditorMedium}"
 }
