--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "declaration": true,
-        "outDir": "this-dir-must-not-be-created",
+        "outDir": "x:\this-dir-must-not-be-created",
         "sourceMap": true,
         "moduleResolution": "node",
         "lib":["es2015", "dom"],
