--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datos-ext",
   "description": "App de administración de datos externos",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "author": "Codenautas <codenautas@googlegroups.com>",
   "license": "MIT",
   "main": "server/app-datos-ext.js",
@@ -14,23 +14,17 @@
   ],
   "repository": "codenautas/datos-ext",
   "dependencies": {
-    "backend-plus": "~0.21.6",
-    "operativos": "~0.1.11",
-    "mini-tools": "~1.0.1",
-    "require-bro": "~0.1.11"
+    "pg-triggers": "~0.2.1",
+    "operativos": "~0.1.14"
   },
   "devDependencies": {
-    "@types/mocha": "~5.2.1",
-    "@types/yazl": "~2.4.0",
-    "discrepances": "~0.2.2",
-    "pg-triggers": "~0.2.1",
-    "types.d.ts": "~0.1.25"
+    "@types/node": "~10.3.4",
+    "@types/express": "~4.16.0"
   },
   "engines": {
     "node": ">= 8.0.0"
   },
   "scripts": {
-    "test": "mocha --reporter spec --bail --check-leaks test/",
     "prepublish": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node server/server-datos-ext.js"
   },
