--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "lib":["es2015", "dom"],
         "target": "es5",
         "module": "umd",
-        "typeRoots" : ["node_modules/@types", "node_modules/types.d.ts/modules"],
+        "typeRoots" : ["node_modules/@types"],
         "noImplicitAny": true,
         "alwaysStrict": true,
         "noUnusedLocals": true,
