--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "moduleResolution": "node",
         "lib":["es2015", "dom"],
         "target": "es5",
-        //"skipLibCheck": true,
+        "skipLibCheck": true, //para que no haga chequeo de tipos en los declaration files dentro de node-modules(pg-promise)
         "module": "umd",
         "typeRoots" : ["node_modules/@types"],
         "noImplicitAny": true,
