--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datos-ext",
   "description": "App de administración de datos externos",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "author": "Codenautas <codenautas@googlegroups.com>",
   "license": "MIT",
   "main": "server/app-datos-ext.js",
@@ -15,13 +15,14 @@
   "repository": "codenautas/datos-ext",
   "dependencies": {
     "pg-triggers": "~0.2.1",
-    "operativos": "~0.1.18"
+    "operativos": "~0.1.19"
   },
   "engines": {
     "node": ">= 8.0.0"
   },
   "scripts": {
-    "prepublish": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
+    "prepublish": "npm run build",
+    "build": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node server/server-datos-ext.js"
   },
   "qa-control": {
