--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "operativos": "~0.1.21"
   },
+  "devDependencies": {
+    "types.d.ts": "~0.1.31"
+  },
   "engines": {
     "node": ">= 8.0.0"
   },
