--- a/def-config.yaml
+++ b/def-config.yaml
@@ -22,6 +22,7 @@ install:
       post-adapt: 
       - event_control_creates.sql
       - para-install.sql
+      - controlar_modificacion_estructura_cerrada.sql      
       - ../node_modules/pg-triggers/lib/recreate-his.sql
       - ../node_modules/pg-triggers/lib/table-changes.sql
       - ../node_modules/pg-triggers/lib/function-changes-trg.sql
