--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datos-ext",
   "description": "App de administración de datos externos",
-  "version": "0.1.20",
+  "version": "0.1.22",
   "author": "Codenautas <codenautas@googlegroups.com>",
   "license": "MIT",
   "main": "server/app-datos-ext.js",
@@ -14,7 +14,7 @@
   ],
   "repository": "codenautas/datos-ext",
   "dependencies": {
-    "operativos": "~0.1.31"
+    "operativos": "~0.1.33"
   },
   "devDependencies": {
     "types.d.ts": "~0.1.32"
@@ -23,7 +23,7 @@
     "node": ">= 8.0.0"
   },
   "scripts": {
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "build": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node server/server-datos-ext.js"
   },
