--- a/tsconfig-server.json
+++ b/tsconfig-server.json
@@ -3,7 +3,7 @@
         "outDir": "server",
         "module": "none",
         "target": "es2017",
-        "lib": [ "es2015", "dom"]
+        "lib": [ "es2017", "es2015", "dom"]
     },
     "include":[
         "src/server"
