--- a/.npmignore
+++ b/.npmignore
@@ -4,9 +4,8 @@
 local-*
 *-local.*
 
-# Don't publish Typescript code
+# Never publish Typescript code
 src/
 
-# Always publish generated files (.js, .map. .d.ts)
-!server/
-!client/
+# and source for debug
+!src/client/
