--- a/tsconfig-common.json
+++ b/tsconfig-common.json
@@ -6,7 +6,7 @@
         "moduleResolution": "node",
         "lib":["es2015"],
         "target": "es5",
-        "strict": true,
+        "strict": false,
         "skipLibCheck": true, //para que no haga chequeo de tipos en los declaration files dentro de node-modules(pg-promise-strict, express, node)
         "module": "umd",
         "typeRoots" : ["node_modules/@types", "node_modules/types.d.ts/modules"],
