--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datos-ext",
   "description": "App de administración de datos externos",
-  "version": "0.4.5",
+  "version": "0.5.0",
   "author": "Codenautas <codenautas@googlegroups.com>",
   "repository": "codenautas/datos-ext",
   "license": "MIT",
@@ -14,18 +14,19 @@
     "unlogged"
   ],
   "dependencies": {
-    "operativos": "0.4.7"
+    "operativos": "0.5.0"
   },
   "devDependencies": {
-    "types.d.ts": "~0.3.1"
+    "types.d.ts": "~0.4.0"
   },
   "engines": {
-    "node": ">= 8.0.0"
+    "node": ">= 10.0.0"
   },
   "scripts": {
     "prepare": "npm run build",
-    "build": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
-    "start": "node server/server-datos-ext.js"
+    "build": "tsc -p tsconfig-client.json && tsc -p tsconfig-server.json",
+    "build-ignoring-err": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
+    "start": "node dist/server/server-datos-ext.js"
   },
   "qa-control": {
     "package-version": "0.3.0",
