--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
   "types": "dist/server/app-datos-ext.d.ts",
   "files": [
     "dist",
-    "install",
-    "src",
-    "unlogged"
+    "install"
   ],
   "dependencies": {
     "operativos": "0.5.1"
   },
   "devDependencies": {
-    "types.d.ts": "~0.4.0"
+    "types.d.ts": "~0.4.0",
+    "mixin-patch": "~0.1.0"
   },
   "engines": {
     "node": ">= 10.0.0"
   },
   "scripts": {
     "prepare": "npm run build",
-    "build": "tsc -p tsconfig-client.json && tsc -p tsconfig-server.json",
+    "build": "tsc -p tsconfig-client.json && tsc -p tsconfig-server.json & node node_modules/mixin-patch/dist/tool/mixin-patch",
     "build-ignoring-err": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node dist/server/server-datos-ext.js"
   },
