--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datos-ext",
   "description": "App de administración de datos externos",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "author": "Codenautas <codenautas@googlegroups.com>",
   "repository": "codenautas/datos-ext",
   "license": "MIT",
@@ -12,18 +12,18 @@
     "install"
   ],
   "dependencies": {
-    "operativos": "0.5.1"
+    "operativos": "0.5.2"
   },
   "devDependencies": {
     "types.d.ts": "~0.4.0",
-    "mixin-patch": "~0.1.0"
+    "mixin-patch": "~0.1.3"
   },
   "engines": {
     "node": ">= 10.0.0"
   },
   "scripts": {
     "prepare": "npm run build",
-    "build": "tsc -p tsconfig-client.json && tsc -p tsconfig-server.json & node node_modules/mixin-patch/dist/tool/mixin-patch",
+    "build": "tsc -p tsconfig-client.json && tsc -p tsconfig-server.json & mixin-patch",
     "build-ignoring-err": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node dist/server/server-datos-ext.js"
   },
