--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "App de administración de datos externos",
   "version": "0.7.1",
   "author": "Codenautas <codenautas@googlegroups.com>",
+  "contributors": ["Raquel N Salva <raquelzssalva@gmail.com>, Eugenio Arosteguy <eugenio.arosteguy@gmail.com>, Emilio Platzer <emilioplatzer@gmail.com>"],
   "repository": "codenautas/datos-ext",
   "license": "MIT",
   "main": "dist/server/app-datos-ext.js",
