--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build-force": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node dist/server/server-datos-ext.js",
     "clink": "npm prune && npm run build && npm link operativos && npm run build",
-    "publish-stack": "npm version patch && ncu -u && git commit -am 'upgrading stack dependencies' && npm publish"
+    "publish-stack": "npm version patch && ncu -u && git commit -am \"upgrading stack dependencies\" && npm publish"
   },
   "qa-control": {
     "package-version": "0.3.0",
