--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "build-force": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node dist/server/server-datos-ext.js",
     "clink": "npm prune && npm run build && npm link operativos && npm run build",
-    "git-prueba": "git add package.json && git commit -m \"upgrading stack dependencies\"",
-    "publish-stack": "npm version patch && ncu -u && npm publish"
+    "publish-stack": "npm version patch && ncu -u && git add package.json && git commit -m \"upgrading stack dependencies\" && npm publish && git push"
   },
   "qa-control": {
     "package-version": "0.3.0",
