--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datos-ext",
   "description": "App de administración de datos externos",
-  "version": "0.7.6",
+  "version": "0.7.7",
   "author": "Codenautas <codenautas@googlegroups.com>",
   "contributors": [
     "Raquel N Salva <raquelzssalva@gmail.com>",
@@ -32,7 +32,8 @@
     "build-force": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node dist/server/server-datos-ext.js",
     "clink": "npm prune && npm run build && npm link operativos && npm run build",
-    "publish-stack": "npm version patch && ncu -u && git add package.json && git commit -m \"upgrading stack dependencies\" && npm publish && git push"
+    "git-prueba": "git add package.json && git commit -m \"upgrading stack dependencies\"",
+    "publish-stack": "npm version patch && ncu -u && npm publish && git push"
   },
   "qa-control": {
     "package-version": "0.3.0",
