--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "tsc -p tsconfig-client.json && tsc -p tsconfig-server.json & mixin-patch",
     "build-force": "(tsc -p tsconfig-client.json || echo \"continue w/error\") && (tsc -p tsconfig-server.json  || echo \"continue w/error\")",
     "start": "node dist/server/server-datos-ext.js",
-    "clink": "npm prune && npm run build && npm link operativos && npm run build",
+    "clink": "npm prune && npm i && npm run build && npm link operativos && npm run build",
     "git-commit": "git add package.json && git commit -m \"upgrading stack dependencies\"",
     "publish-stack": "npm version patch && ncu -u && npm run git-commit && npm publish && git push"
   },
