--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,13 +1,10 @@
 {
     "compilerOptions": {
         "outDir": "../../dist/server",
-        "module": "none",
-        "target": "es2018",
-        "lib":["es2017", "es2015", "es2018"],
-        "baseUrl": ""
+        "target": "es2019",
     },
     "include":[
         "."
     ], 
-    "extends": "../../tsconfig-common.json"
+    "extends": "../tsconfig-common.json"
 }
