--- a/src/tsconfig-common.json
+++ b/src/tsconfig-common.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "declaration": true,
         "outDir": "x:\\this-dir-must-not-be-created",
         "inlineSourceMap": true,
         "inlineSources": true,
@@ -10,8 +9,7 @@
         "strict": true,
         "skipLibCheck": true, //para que no haga chequeo de tipos en los declaration files dentro de node-modules(pg-promise-strict, express, node)
         "module": "umd",
-        "typeRoots" : ["node_modules/@types", "node_modules/types.d.ts/modules"],
-        "declarationMap": true,
+        "typeRoots" : ["../node_modules/@types", "../node_modules/types.d.ts/modules"],
         "noImplicitAny": true,
         "alwaysStrict": true,
         "noUnusedLocals": true,
