--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start": "node dist/server/server-datos-ext.js",
     "clink": "npm prune && npm i && npm run build && npm link operativos && npm run build",
     "git-commit": "git add package.json && (git commit -m \"upgrading stack dependencies\" || true)",
-    "publish-stack": "npm version patch && ncu -u && npm run git-commit && npm publish && git push"
+    "push-publish": "npm version patch && ncu -u && npm run git-commit && npm publish && git push"
   },
   "qa-control": {
     "package-version": "0.3.0",
